name:                decode
version:             0.1.0.0
synopsis:            Demonstration of using parser combinators to solve an style problem
description:         Please see README.md
homepage:            https://github.com/porterjamesj/decode
license:             MIT
license-file:        LICENSE
author:              James J Porter
maintainer:          james@jamesporter.me
copyright:           2017 James J Porter
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable decode
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec
